app/globals.css
@import 'tailwindcss';
@import 'tw-animate-css';
@plugin '@tailwindcss/typography';

@custom-variant dark (&:where(.dark, .dark *));

@theme inline {
  --color-background: var(--background);

  --color-foreground: var(--foreground);

  --color-card: var(--card);

  --color-card-foreground: var(--card-foreground);

  --color-popover: var(--popover);

  --color-popover-foreground: var(--popover-foreground);

  --color-primary: var(--primary);

  --color-primary-foreground: var(--primary-foreground);

  --color-secondary: var(--secondary);

  --color-secondary-foreground: var(--secondary-foreground);

  --color-muted: var(--muted);

  --color-muted-foreground: var(--muted-foreground);

  --color-accent: var(--accent);

  --color-accent-foreground: var(--accent-foreground);

  --color-destructive: var(--destructive);

  --color-border: var(--border);

  --color-input: var(--input);

  --color-ring: var(--ring);

  --color-chart-1: var(--chart-1);

  --color-chart-2: var(--chart-2);

  --color-chart-3: var(--chart-3);

  --color-chart-4: var(--chart-4);

  --color-chart-5: var(--chart-5);

  --color-sidebar: var(--sidebar);

  --color-sidebar-foreground: var(--sidebar-foreground);

  --color-sidebar-primary: var(--sidebar-primary);

  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);

  --color-sidebar-accent: var(--sidebar-accent);

  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);

  --color-sidebar-border: var(--sidebar-border);

  --color-sidebar-ring: var(--sidebar-ring);

  --color-destructive-foreground: var(--destructive-foreground);
}

:root {
  --background: var(--color-white);
  --foreground: var(--color-slate-900);
  --card: var(--color-white);
  --card-foreground: var(--color-slate-900);
  --popover: var(--color-white);
  --popover-foreground: var(--color-slate-900);
  --primary: var(--color-blue-600);
  --primary-foreground: var(--color-slate-50);
  --secondary: var(--color-slate-100);
  --secondary-foreground: var(--color-slate-900);
  --muted: var(--color-slate-100);
  --muted-foreground: var(--color-slate-500);
  --accent: var(--color-slate-100);
  --accent-foreground: var(--color-slate-900);
  --destructive: var(--color-red-500);
  --destructive-foreground: var(--color-slate-50);
  --border: var(--color-slate-200);
  --input: var(--color-slate-200);
  --ring: var(--color-blue-600);

  --chart-1: var(--color-orange-500);
  --chart-2: var(--color-teal-600);
  --chart-3: var(--color-slate-600);
  --chart-4: var(--color-yellow-400);
  --chart-5: var(--color-amber-400);

  --sidebar: var(--color-slate-50);
  --sidebar-foreground: var(--color-slate-900);
  --sidebar-primary: var(--color-slate-900);
  --sidebar-primary-foreground: var(--color-slate-50);
  --sidebar-accent: var(--color-slate-100);
  --sidebar-accent-foreground: var(--color-slate-900);
  --sidebar-border: var(--color-slate-200);
  --sidebar-ring: var(--color-slate-400);
}

.dark {
  --background: var(--color-slate-950);
  --foreground: var(--color-slate-50);
  --card: var(--color-slate-950);
  --card-foreground: var(--color-slate-50);
  --popover: var(--color-slate-950);
  --popover-foreground: var(--color-slate-50);
  --primary: var(--color-blue-500);
  --primary-foreground: var(--color-slate-900);
  --secondary: var(--color-slate-800);
  --secondary-foreground: var(--color-slate-50);
  --muted: var(--color-slate-800);
  --muted-foreground: var(--color-slate-400);
  --accent: var(--color-slate-800);
  --accent-foreground: var(--color-slate-50);
  --destructive: var(--color-red-900);
  --destructive-foreground: var(--color-slate-50);
  --border: var(--color-slate-800);
  --input: var(--color-slate-800);
  --ring: var(--color-blue-500);

  --chart-1: var(--color-blue-500);
  --chart-2: var(--color-emerald-500);
  --chart-3: var(--color-amber-400);
  --chart-4: var(--color-violet-500);
  --chart-5: var(--color-rose-500);

  --sidebar: var(--color-slate-900);
  --sidebar-foreground: var(--color-slate-50);
  --sidebar-primary: var(--color-blue-500);
  --sidebar-primary-foreground: var(--color-slate-50);
  --sidebar-accent: var(--color-slate-800);
  --sidebar-accent-foreground: var(--color-slate-50);
  --sidebar-border: var(--color-slate-700);
  --sidebar-ring: var(--color-slate-500);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
  }
}

